# freelance-shield-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BUILD_SPEC.md  DESIGN.md  Dockerfile  PRD.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ad8911fa577b_initial_schema.py  aff46b700adb_add_mcp_discussion_snapshot_and_.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  adk_agents.py
backend/app/api/: health.py  workflow.py
backend/app/db/: database.py  sqlite.py
backend/app/mcp_server/: __init__.py  server.py
backend/app/models/: domain.py
backend/app/policy/: follow_up.py
backend/app/repositories/: domain_repo.py  workflow.py
backend/app/schemas/: agent_workflow.py  workflow.py
backend/app/services/: adk_workflow.py  domain_service.py  errors.py  workflow.py  workflow_backend.py
backend/app/utils/: hashing.py  time.py
backend/tests/: test_adk_workflow.py  test_adk_workflow_m4.py  test_health.py  test_mcp_server.py  test_persistence_states.py  test_workflow_api.py
docs/: AGENT_CONTRACT.md  API_CONTRACT.md  ARCHITECTURE.md  DEMO_SCRIPT.md  MCP_CONTRACT.md  SECURITY.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  schema.ts
frontend/src/api/: workflow.ts
frontend/src/components/workflow/: AuditPreview.tsx  DraftReviewPanel.tsx  (+14 more)
frontend/src/pages/: DashboardPage.tsx  NewProjectPage.test.tsx  NewProjectPage.tsx  PlaceholderPage.tsx  WorkflowPage.tsx
