[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "freelance-shield-ai"
version = "0.1.0"
description = "FreelanceShield AI FastAPI scaffold"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "google-adk>=2.3,<3",
  "mcp>=1.28,<2",
  "pydantic>=2.10,<3",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
